Fix text wrapping in badges

--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -62,6 +62,6 @@
   border-radius: 4px;
   padding: 4px 6px;
   margin: 2px 1px;
-  width: min-content;
+  width: max-content;
   background: grey;
 }
